parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASPAS
    COMENTARIOUMALINHA
    COMENTARIOMAISUMALINHA

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declfuncvar declprog
Rule 2     declfuncvar -> tipo IDENTIFICADOR declvar PONTOEVIRGULA declfuncvar
Rule 3     declfuncvar -> tipo IDENTIFICADOR ABRECOLCHETE INTEIROCONSTANTE FECHACOLCHETE declvar PONTOEVIRGULA declfuncvar
Rule 4     declfuncvar -> tipo IDENTIFICADOR declfunc declfuncvar
Rule 5     declfuncvar -> <empty>
Rule 6     declprog -> PROGRAMA bloco
Rule 7     declvar -> VIRGULA IDENTIFICADOR declvar
Rule 8     declvar -> VIRGULA IDENTIFICADOR ABRECOLCHETE INTEIROCONSTANTE FECHACOLCHETE declvar
Rule 9     declvar -> <empty>
Rule 10    declfunc -> ABREPARENTESES listaparametros FECHAPARENTESES bloco
Rule 11    listaparametros -> <empty>
Rule 12    listaparametros -> listaparametroscont
Rule 13    listaparametroscont -> tipo IDENTIFICADOR
Rule 14    listaparametroscont -> tipo IDENTIFICADOR ABRECOLCHETE FECHACOLCHETE
Rule 15    listaparametroscont -> tipo IDENTIFICADOR VIRGULA listaparametroscont
Rule 16    listaparametroscont -> tipo IDENTIFICADOR ABRECOLCHETE FECHACOLCHETE VIRGULA listaparametroscont
Rule 17    bloco -> ABRECHAVES listadeclvar listacomando FECHACHAVES
Rule 18    bloco -> ABRECHAVES listadeclvar FECHACHAVES
Rule 19    listadeclvar -> <empty>
Rule 20    listadeclvar -> tipo IDENTIFICADOR declvar PONTOEVIRGULA listadeclvar
Rule 21    listadeclvar -> tipo IDENTIFICADOR ABRECOLCHETE INTEIROCONSTANTE FECHACOLCHETE declvar PONTOEVIRGULA listadeclvar
Rule 22    tipo -> INTEIRO
Rule 23    tipo -> CARACTERE
Rule 24    listacomando -> comando
Rule 25    listacomando -> comando listacomando
Rule 26    comando -> PONTOEVIRGULA
Rule 27    comando -> expr PONTOEVIRGULA
Rule 28    comando -> RETORNE expr PONTOEVIRGULA
Rule 29    comando -> LEIA lvalueexpr PONTOEVIRGULA
Rule 30    comando -> ESCREVA expr PONTOEVIRGULA
Rule 31    comando -> ESCREVA CADEIACARACTERE PONTOEVIRGULA
Rule 32    comando -> NOVALINHA PONTOEVIRGULA
Rule 33    comando -> SE ABREPARENTESES expr FECHAPARENTESES ENTAO comando
Rule 34    comando -> SE ABREPARENTESES expr FECHAPARENTESES ENTAO comando SENAO comando
Rule 35    comando -> ENQUANTO ABREPARENTESES expr FECHAPARENTESES EXECUTE comando
Rule 36    comando -> bloco
Rule 37    expr -> assignexpr
Rule 38    assignexpr -> condexpr
Rule 39    assignexpr -> lvalueexpr ATRIBUICAO assignexpr
Rule 40    condexpr -> orexpr
Rule 41    condexpr -> orexpr OPERADORTERNARIO expr DOISPONTOS condexpr
Rule 42    orexpr -> orexpr OPERADORLOGICOOU andexpr
Rule 43    orexpr -> andexpr
Rule 44    andexpr -> andexpr OPERADORLOGICOE eqexpr
Rule 45    andexpr -> eqexpr
Rule 46    eqexpr -> eqexpr COMPARACAOIGUAL desigexpr
Rule 47    eqexpr -> eqexpr COMPARACAODIFERENTE desigexpr
Rule 48    eqexpr -> desigexpr
Rule 49    desigexpr -> desigexpr COMPARACAOMENOR addexpr
Rule 50    desigexpr -> desigexpr COMPARACAOMAIOR addexpr
Rule 51    desigexpr -> desigexpr COMPARACAOMAIOROUIGUAL addexpr
Rule 52    desigexpr -> desigexpr COMPARACAOMENOROUIGUAL addexpr
Rule 53    desigexpr -> addexpr
Rule 54    addexpr -> addexpr OPERADORSOMA mulexpr
Rule 55    addexpr -> addexpr OPERADORSUBTRACAO mulexpr
Rule 56    addexpr -> mulexpr
Rule 57    mulexpr -> mulexpr OPERADORVEZES unexpr
Rule 58    mulexpr -> mulexpr OPERADORDIVISAO unexpr
Rule 59    mulexpr -> mulexpr OPERADORRESTODIVISAO unexpr
Rule 60    mulexpr -> unexpr
Rule 61    unexpr -> OPERADORSUBTRACAO primexpr
Rule 62    unexpr -> OPERADORNEGACAO primexpr
Rule 63    unexpr -> primexpr
Rule 64    lvalueexpr -> IDENTIFICADOR ABRECOLCHETE expr FECHACOLCHETE
Rule 65    lvalueexpr -> IDENTIFICADOR
Rule 66    primexpr -> IDENTIFICADOR ABREPARENTESES listexpr FECHAPARENTESES
Rule 67    primexpr -> IDENTIFICADOR ABREPARENTESES FECHAPARENTESES
Rule 68    primexpr -> IDENTIFICADOR ABRECOLCHETE expr FECHACOLCHETE
Rule 69    primexpr -> IDENTIFICADOR
Rule 70    primexpr -> CARACTERECONSTANTE
Rule 71    primexpr -> INTEIROCONSTANTE
Rule 72    primexpr -> ABREPARENTESES expr FECHAPARENTESES
Rule 73    listexpr -> assignexpr
Rule 74    listexpr -> listexpr VIRGULA assignexpr

Terminals, with rules where they appear

ABRECHAVES           : 17 18
ABRECOLCHETE         : 3 8 14 16 21 64 68
ABREPARENTESES       : 10 33 34 35 66 67 72
ASPAS                : 
ATRIBUICAO           : 39
CADEIACARACTERE      : 31
CARACTERE            : 23
CARACTERECONSTANTE   : 70
COMENTARIOMAISUMALINHA : 
COMENTARIOUMALINHA   : 
COMPARACAODIFERENTE  : 47
COMPARACAOIGUAL      : 46
COMPARACAOMAIOR      : 50
COMPARACAOMAIOROUIGUAL : 51
COMPARACAOMENOR      : 49
COMPARACAOMENOROUIGUAL : 52
DOISPONTOS           : 41
ENQUANTO             : 35
ENTAO                : 33 34
ESCREVA              : 30 31
EXECUTE              : 35
FECHACHAVES          : 17 18
FECHACOLCHETE        : 3 8 14 16 21 64 68
FECHAPARENTESES      : 10 33 34 35 66 67 72
IDENTIFICADOR        : 2 3 4 7 8 13 14 15 16 20 21 64 65 66 67 68 69
INTEIRO              : 22
INTEIROCONSTANTE     : 3 8 21 71
LEIA                 : 29
NOVALINHA            : 32
OPERADORDIVISAO      : 58
OPERADORLOGICOE      : 44
OPERADORLOGICOOU     : 42
OPERADORNEGACAO      : 62
OPERADORRESTODIVISAO : 59
OPERADORSOMA         : 54
OPERADORSUBTRACAO    : 55 61
OPERADORTERNARIO     : 41
OPERADORVEZES        : 57
PONTOEVIRGULA        : 2 3 20 21 26 27 28 29 30 31 32
PROGRAMA             : 6
RETORNE              : 28
SE                   : 33 34
SENAO                : 34
VIRGULA              : 7 8 15 16 74
error                : 

Nonterminals, with rules where they appear

addexpr              : 49 50 51 52 53 54 55
andexpr              : 42 43 44
assignexpr           : 37 39 73 74
bloco                : 6 10 36
comando              : 24 25 33 34 34 35
condexpr             : 38 41
declfunc             : 4
declfuncvar          : 1 2 3 4
declprog             : 1
declvar              : 2 3 7 8 20 21
desigexpr            : 46 47 48 49 50 51 52
eqexpr               : 44 45 46 47
expr                 : 27 28 30 33 34 35 41 64 68 72
listacomando         : 17 25
listadeclvar         : 17 18 20 21
listaparametros      : 10
listaparametroscont  : 12 15 16
listexpr             : 66 74
lvalueexpr           : 29 39
mulexpr              : 54 55 56 57 58 59
orexpr               : 40 41 42
primexpr             : 61 62 63
programa             : 0
tipo                 : 2 3 4 13 14 15 16 20 21
unexpr               : 57 58 59 60

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declfuncvar declprog
    (2) declfuncvar -> . tipo IDENTIFICADOR declvar PONTOEVIRGULA declfuncvar
    (3) declfuncvar -> . tipo IDENTIFICADOR ABRECOLCHETE INTEIROCONSTANTE FECHACOLCHETE declvar PONTOEVIRGULA declfuncvar
    (4) declfuncvar -> . tipo IDENTIFICADOR declfunc declfuncvar
    (5) declfuncvar -> .
    (22) tipo -> . INTEIRO
    (23) tipo -> . CARACTERE

    PROGRAMA        reduce using rule 5 (declfuncvar -> .)
    INTEIRO         shift and go to state 2
    CARACTERE       shift and go to state 4

    tipo                           shift and go to state 1
    programa                       shift and go to state 3
    declfuncvar                    shift and go to state 5

state 1

    (2) declfuncvar -> tipo . IDENTIFICADOR declvar PONTOEVIRGULA declfuncvar
    (3) declfuncvar -> tipo . IDENTIFICADOR ABRECOLCHETE INTEIROCONSTANTE FECHACOLCHETE declvar PONTOEVIRGULA declfuncvar
    (4) declfuncvar -> tipo . IDENTIFICADOR declfunc declfuncvar

    IDENTIFICADOR   shift and go to state 6


state 2

    (22) tipo -> INTEIRO .

    IDENTIFICADOR   reduce using rule 22 (tipo -> INTEIRO .)


state 3

    (0) S' -> programa .



state 4

    (23) tipo -> CARACTERE .

    IDENTIFICADOR   reduce using rule 23 (tipo -> CARACTERE .)


state 5

    (1) programa -> declfuncvar . declprog
    (6) declprog -> . PROGRAMA bloco

    PROGRAMA        shift and go to state 8

    declprog                       shift and go to state 7

state 6

    (2) declfuncvar -> tipo IDENTIFICADOR . declvar PONTOEVIRGULA declfuncvar
    (3) declfuncvar -> tipo IDENTIFICADOR . ABRECOLCHETE INTEIROCONSTANTE FECHACOLCHETE declvar PONTOEVIRGULA declfuncvar
    (4) declfuncvar -> tipo IDENTIFICADOR . declfunc declfuncvar
    (7) declvar -> . VIRGULA IDENTIFICADOR declvar
    (8) declvar -> . VIRGULA IDENTIFICADOR ABRECOLCHETE INTEIROCONSTANTE FECHACOLCHETE declvar
    (9) declvar -> .
    (10) declfunc -> . ABREPARENTESES listaparametros FECHAPARENTESES bloco

    ABRECOLCHETE    shift and go to state 12
    VIRGULA         shift and go to state 11
    PONTOEVIRGULA   reduce using rule 9 (declvar -> .)
    ABREPARENTESES  shift and go to state 13

    declfunc                       shift and go to state 10
    declvar                        shift and go to state 9

state 7

    (1) programa -> declfuncvar declprog .

    $end            reduce using rule 1 (programa -> declfuncvar declprog .)


state 8

    (6) declprog -> PROGRAMA . bloco
    (17) bloco -> . ABRECHAVES listadeclvar listacomando FECHACHAVES
    (18) bloco -> . ABRECHAVES listadeclvar FECHACHAVES

    ABRECHAVES      shift and go to state 14

    bloco                          shift and go to state 15

state 9

    (2) declfuncvar -> tipo IDENTIFICADOR declvar . PONTOEVIRGULA declfuncvar

    PONTOEVIRGULA   shift and go to state 16


state 10

    (4) declfuncvar -> tipo IDENTIFICADOR declfunc . declfuncvar
    (2) declfuncvar -> . tipo IDENTIFICADOR declvar PONTOEVIRGULA declfuncvar
    (3) declfuncvar -> . tipo IDENTIFICADOR ABRECOLCHETE INTEIROCONSTANTE FECHACOLCHETE declvar PONTOEVIRGULA declfuncvar
    (4) declfuncvar -> . tipo IDENTIFICADOR declfunc declfuncvar
    (5) declfuncvar -> .
    (22) tipo -> . INTEIRO
    (23) tipo -> . CARACTERE

    PROGRAMA        reduce using rule 5 (declfuncvar -> .)
    INTEIRO         shift and go to state 2
    CARACTERE       shift and go to state 4

    tipo                           shift and go to state 1
    declfuncvar                    shift and go to state 17

state 11

    (7) declvar -> VIRGULA . IDENTIFICADOR declvar
    (8) declvar -> VIRGULA . IDENTIFICADOR ABRECOLCHETE INTEIROCONSTANTE FECHACOLCHETE declvar

    IDENTIFICADOR   shift and go to state 18


state 12

    (3) declfuncvar -> tipo IDENTIFICADOR ABRECOLCHETE . INTEIROCONSTANTE FECHACOLCHETE declvar PONTOEVIRGULA declfuncvar

    INTEIROCONSTANTE shift and go to state 19


state 13

    (10) declfunc -> ABREPARENTESES . listaparametros FECHAPARENTESES bloco
    (11) listaparametros -> .
    (12) listaparametros -> . listaparametroscont
    (13) listaparametroscont -> . tipo IDENTIFICADOR
    (14) listaparametroscont -> . tipo IDENTIFICADOR ABRECOLCHETE FECHACOLCHETE
    (15) listaparametroscont -> . tipo IDENTIFICADOR VIRGULA listaparametroscont
    (16) listaparametroscont -> . tipo IDENTIFICADOR ABRECOLCHETE FECHACOLCHETE VIRGULA listaparametroscont
    (22) tipo -> . INTEIRO
    (23) tipo -> . CARACTERE

    FECHAPARENTESES reduce using rule 11 (listaparametros -> .)
    INTEIRO         shift and go to state 2
    CARACTERE       shift and go to state 4

    tipo                           shift and go to state 20
    listaparametroscont            shift and go to state 21
    listaparametros                shift and go to state 22

state 14

    (17) bloco -> ABRECHAVES . listadeclvar listacomando FECHACHAVES
    (18) bloco -> ABRECHAVES . listadeclvar FECHACHAVES
    (19) listadeclvar -> .
    (20) listadeclvar -> . tipo IDENTIFICADOR declvar PONTOEVIRGULA listadeclvar
    (21) listadeclvar -> . tipo IDENTIFICADOR ABRECOLCHETE INTEIROCONSTANTE FECHACOLCHETE declvar PONTOEVIRGULA listadeclvar
    (22) tipo -> . INTEIRO
    (23) tipo -> . CARACTERE

    FECHACHAVES     reduce using rule 19 (listadeclvar -> .)
    PONTOEVIRGULA   reduce using rule 19 (listadeclvar -> .)
    RETORNE         reduce using rule 19 (listadeclvar -> .)
    LEIA            reduce using rule 19 (listadeclvar -> .)
    ESCREVA         reduce using rule 19 (listadeclvar -> .)
    NOVALINHA       reduce using rule 19 (listadeclvar -> .)
    SE              reduce using rule 19 (listadeclvar -> .)
    ENQUANTO        reduce using rule 19 (listadeclvar -> .)
    ABRECHAVES      reduce using rule 19 (listadeclvar -> .)
    IDENTIFICADOR   reduce using rule 19 (listadeclvar -> .)
    OPERADORSUBTRACAO reduce using rule 19 (listadeclvar -> .)
    OPERADORNEGACAO reduce using rule 19 (listadeclvar -> .)
    CARACTERECONSTANTE reduce using rule 19 (listadeclvar -> .)
    INTEIROCONSTANTE reduce using rule 19 (listadeclvar -> .)
    ABREPARENTESES  reduce using rule 19 (listadeclvar -> .)
    INTEIRO         shift and go to state 2
    CARACTERE       shift and go to state 4

    tipo                           shift and go to state 23
    listadeclvar                   shift and go to state 24

state 15

    (6) declprog -> PROGRAMA bloco .

    $end            reduce using rule 6 (declprog -> PROGRAMA bloco .)


state 16

    (2) declfuncvar -> tipo IDENTIFICADOR declvar PONTOEVIRGULA . declfuncvar
    (2) declfuncvar -> . tipo IDENTIFICADOR declvar PONTOEVIRGULA declfuncvar
    (3) declfuncvar -> . tipo IDENTIFICADOR ABRECOLCHETE INTEIROCONSTANTE FECHACOLCHETE declvar PONTOEVIRGULA declfuncvar
    (4) declfuncvar -> . tipo IDENTIFICADOR declfunc declfuncvar
    (5) declfuncvar -> .
    (22) tipo -> . INTEIRO
    (23) tipo -> . CARACTERE

    PROGRAMA        reduce using rule 5 (declfuncvar -> .)
    INTEIRO         shift and go to state 2
    CARACTERE       shift and go to state 4

    tipo                           shift and go to state 1
    declfuncvar                    shift and go to state 25

state 17

    (4) declfuncvar -> tipo IDENTIFICADOR declfunc declfuncvar .

    PROGRAMA        reduce using rule 4 (declfuncvar -> tipo IDENTIFICADOR declfunc declfuncvar .)


state 18

    (7) declvar -> VIRGULA IDENTIFICADOR . declvar
    (8) declvar -> VIRGULA IDENTIFICADOR . ABRECOLCHETE INTEIROCONSTANTE FECHACOLCHETE declvar
    (7) declvar -> . VIRGULA IDENTIFICADOR declvar
    (8) declvar -> . VIRGULA IDENTIFICADOR ABRECOLCHETE INTEIROCONSTANTE FECHACOLCHETE declvar
    (9) declvar -> .

    ABRECOLCHETE    shift and go to state 27
    VIRGULA         shift and go to state 11
    PONTOEVIRGULA   reduce using rule 9 (declvar -> .)

    declvar                        shift and go to state 26

state 19

    (3) declfuncvar -> tipo IDENTIFICADOR ABRECOLCHETE INTEIROCONSTANTE . FECHACOLCHETE declvar PONTOEVIRGULA declfuncvar

    FECHACOLCHETE   shift and go to state 28


state 20

    (13) listaparametroscont -> tipo . IDENTIFICADOR
    (14) listaparametroscont -> tipo . IDENTIFICADOR ABRECOLCHETE FECHACOLCHETE
    (15) listaparametroscont -> tipo . IDENTIFICADOR VIRGULA listaparametroscont
    (16) listaparametroscont -> tipo . IDENTIFICADOR ABRECOLCHETE FECHACOLCHETE VIRGULA listaparametroscont

    IDENTIFICADOR   shift and go to state 29


state 21

    (12) listaparametros -> listaparametroscont .

    FECHAPARENTESES reduce using rule 12 (listaparametros -> listaparametroscont .)


state 22

    (10) declfunc -> ABREPARENTESES listaparametros . FECHAPARENTESES bloco

    FECHAPARENTESES shift and go to state 30


state 23

    (20) listadeclvar -> tipo . IDENTIFICADOR declvar PONTOEVIRGULA listadeclvar
    (21) listadeclvar -> tipo . IDENTIFICADOR ABRECOLCHETE INTEIROCONSTANTE FECHACOLCHETE declvar PONTOEVIRGULA listadeclvar

    IDENTIFICADOR   shift and go to state 31


state 24

    (17) bloco -> ABRECHAVES listadeclvar . listacomando FECHACHAVES
    (18) bloco -> ABRECHAVES listadeclvar . FECHACHAVES
    (24) listacomando -> . comando
    (25) listacomando -> . comando listacomando
    (26) comando -> . PONTOEVIRGULA
    (27) comando -> . expr PONTOEVIRGULA
    (28) comando -> . RETORNE expr PONTOEVIRGULA
    (29) comando -> . LEIA lvalueexpr PONTOEVIRGULA
    (30) comando -> . ESCREVA expr PONTOEVIRGULA
    (31) comando -> . ESCREVA CADEIACARACTERE PONTOEVIRGULA
    (32) comando -> . NOVALINHA PONTOEVIRGULA
    (33) comando -> . SE ABREPARENTESES expr FECHAPARENTESES ENTAO comando
    (34) comando -> . SE ABREPARENTESES expr FECHAPARENTESES ENTAO comando SENAO comando
    (35) comando -> . ENQUANTO ABREPARENTESES expr FECHAPARENTESES EXECUTE comando
    (36) comando -> . bloco
    (37) expr -> . assignexpr
    (17) bloco -> . ABRECHAVES listadeclvar listacomando FECHACHAVES
    (18) bloco -> . ABRECHAVES listadeclvar FECHACHAVES
    (38) assignexpr -> . condexpr
    (39) assignexpr -> . lvalueexpr ATRIBUICAO assignexpr
    (40) condexpr -> . orexpr
    (41) condexpr -> . orexpr OPERADORTERNARIO expr DOISPONTOS condexpr
    (64) lvalueexpr -> . IDENTIFICADOR ABRECOLCHETE expr FECHACOLCHETE
    (65) lvalueexpr -> . IDENTIFICADOR
    (42) orexpr -> . orexpr OPERADORLOGICOOU andexpr
    (43) orexpr -> . andexpr
    (44) andexpr -> . andexpr OPERADORLOGICOE eqexpr
    (45) andexpr -> . eqexpr
    (46) eqexpr -> . eqexpr COMPARACAOIGUAL desigexpr
    (47) eqexpr -> . eqexpr COMPARACAODIFERENTE desigexpr
    (48) eqexpr -> . desigexpr
    (49) desigexpr -> . desigexpr COMPARACAOMENOR addexpr
    (50) desigexpr -> . desigexpr COMPARACAOMAIOR addexpr
    (51) desigexpr -> . desigexpr COMPARACAOMAIOROUIGUAL addexpr
    (52) desigexpr -> . desigexpr COMPARACAOMENOROUIGUAL addexpr
    (53) desigexpr -> . addexpr
    (54) addexpr -> . addexpr OPERADORSOMA mulexpr
    (55) addexpr -> . addexpr OPERADORSUBTRACAO mulexpr
    (56) addexpr -> . mulexpr
    (57) mulexpr -> . mulexpr OPERADORVEZES unexpr
    (58) mulexpr -> . mulexpr OPERADORDIVISAO unexpr
    (59) mulexpr -> . mulexpr OPERADORRESTODIVISAO unexpr
    (60) mulexpr -> . unexpr
    (61) unexpr -> . OPERADORSUBTRACAO primexpr
    (62) unexpr -> . OPERADORNEGACAO primexpr
    (63) unexpr -> . primexpr
    (66) primexpr -> . IDENTIFICADOR ABREPARENTESES listexpr FECHAPARENTESES
    (67) primexpr -> . IDENTIFICADOR ABREPARENTESES FECHAPARENTESES
    (68) primexpr -> . IDENTIFICADOR ABRECOLCHETE expr FECHACOLCHETE
    (69) primexpr -> . IDENTIFICADOR
    (70) primexpr -> . CARACTERECONSTANTE
    (71) primexpr -> . INTEIROCONSTANTE
    (72) primexpr -> . ABREPARENTESES expr FECHAPARENTESES
